# vitalink_ip_lab

./: .gitignore  IMPLEMENTATION_GAP_ANALYSIS_AND_SCALE_PLAN.md  PRODUCT.md  setup-fcm-env.cmd  setup-firebase-env.cmd
.github/workflows/: backend-ci.yml  build-apk.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/docs/: api-reference.md  api-versioning-and-hardening.md  architecture.md  auth-hardening-verification.md  codex-thread-workflow-auth-hardening.md  data-model.md  device-token-migration.md  file-security-and-purge.md  firebase-phone-auth-setup.md  tenant-authorization-audit.md
backend/src/: app.ts  server.ts
backend/tests/: admin-totp-bootstrap-unit.test.ts  admin-totp-recovery.test.ts  admincontroller.test.ts  apierror.test.ts  apiresponse.test.ts  asynchandler.test.ts  authcontroller.test.ts  backfillfileassets.test.ts  challenge-retention-index.test.ts  devicetoken.test.ts  devicetokenmigration.test.ts  doctorcontroller.test.ts  fileassetconfig.test.ts  fileupload.test.ts  firebaseconfig.test.ts  (+16 more)
deploy/: .env.production.example  README.md  deploy.sh  deploy.test.sh  docker-compose.yml
docs/: environments.md
frontend/: .gitignore  README.md  pubspec.yaml  vercel.json
ml-service/: .gitignore  pyproject.toml
ml-service/data/: real_warfarin_data_cleaned.csv  synthetic_warfarin_data.csv
ml-service/ref/: WarfarinFinalModel.R
ml-service/src/train/: train.ipynb
ml-service/src/train/output/: full_results.pkl  results_summary.csv  warfarin_model.xgb
scripts/: setup-fcm-env.ps1  setup-firebase-auth-env.ps1
(+194 files in other folders)
